# skill-search

./: Cargo.toml  LICENSE  README.md  SKILL.md
.github/workflows/: release.yml
src/: db.rs  github.rs  index.rs  quality.rs
